修正: 小遊戲最高紀錄丟失問題 登入後跑版問題修正中

--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Game/Index.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Game/Index.cshtml
@@ -12,7 +12,7 @@
 
 <!-- Start 遊戲畫面 -->
 
-<div class="canvas-container"style="display:none">
+<div class="canvas-container">
     <div class="gamelayer">
         <canvas id="Canvaslobby"></canvas>
         <!-- Start j轉蛋 -->
@@ -132,7 +132,7 @@
 
     <button id="registerButton">註冊</button>
 </div>
-<button type="submit" id="testlogin" style="display: none;">測試登入</button>
+
 <button type="submit" id="testDBlogin" style="display: none;">測試資料庫登入</button>
 <button type="submit" id="testGameDB" style="display: none;">測試寫入遊戲資料</button>
 <!-- End 遊戲畫面 -->
