完成回覆客訴功能Zzz...

--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Shared/CMS_Layout.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Shared/CMS_Layout.cshtml
@@ -28,8 +28,15 @@
         <ul class="SideBar text-white">
 
             <div class="mb-3">
-                <img src="~/images/logo.png" class="dashboard-logo-img" />
-                <h5 class="dashboard-title">後台管理中心</h5>
+                <div>
+                    <span class="close-icon" onclick="closeSideBar()">
+                        <i class="far fa-times-circle d-md-none"></i>
+                    </span>
+                    <img src="~/images/logo.png" class="dashboard-logo-img" />
+
+                    <h5 class="dashboard-title">後台管理中心</h5>
+                </div>
+                
 
             </div>
 
